src/objects/Tendencia_Endeudamiento__c.object
<CustomObject>
    <fields>
        <fullName>Creditos_Mora_30__c</fullName>
        <label>Creditos Mora 30</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditos_Mora_60__c</fullName>
        <label>Creditos Mora 60</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Tendencias Endeudamiento</relationshipLabel>
        <relationshipName>Tendencias_Endeudamiento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moras_Max_Financiero__c</fullName>
        <label>Moras Max Financiero</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moras_Max_Real__c</fullName>
        <label>Moras Max Real</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moras_Max_Telcos__c</fullName>
        <label>Moras Max Telcos</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldos_Totales_Miles__c</fullName>
        <label>Saldos Totales Miles</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldos_Totales_Mora__c</fullName>
        <label>Saldos Totales Mora</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Moras_Max__c</fullName>
        <label>Total Moras Max</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>